kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/opaque_nat/src/eq.ph
pub type Eq(T: Type, left: T, right: T) {
    .Refl(T: Type, z: T): Eq(T, z, z),
}

pub let(*) identity = fun _(T: Type, t: T): T {
    t
};
