kanc/src/tests/sample_code/should_fail/single_file/bind/ref_fun_in_param.ph
type U {}

let f = fun g(a: g): Type { U };
